Replace image sources with local screenshots

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
             
             <div class="hero-image-container">
-                <img src="https://scontent-lhr6-1.xx.fbcdn.net/v/t39.30808-6/583109805_803361642513404_8197068748790271986_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=102&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=88tyacxnbu0Q7kNvwHEbpjI&_nc_oc=Adn6xGOOsqlZuAdgE1SRH6URc-TbDYOWNby1nXFqogMz2xAGXQRKAX7A4V7J5ktuo4A8m6cbjLizloRRaYv7zTnK&_nc_zt=23&_nc_ht=scontent-lhr6-1.xx&_nc_gid=c6O_8dL97SF86sbf6vpESA&oh=00_Afl86T4ekTigquREgNOCqk8eRRJkai1XUOtX2K6HaXpSnw&oe=69410D65">
+                <img src="Screenshot 2025-12-11 at 20.00.23.png">
             </div>
         </section>
     </div>
@@ -204,7 +204,7 @@
             <div class="bento-grid">
                 
                 <div class="grid-item span-row-2">
-                    <img src="https://scontent-lhr6-1.cdninstagram.com/v/t51.29350-15/448259966_1615634425644754_5542224045684036562_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjE0NDB4MTQ0MC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=scontent-lhr6-1.cdninstagram.com&_nc_cat=110&_nc_oc=Q6cZ2QHA10qjGS-6MCtj-Pd2nNVEvLpH3PJZYIqBCWj9kP2kitlYXvH7PvxqKE9o6XJytcGaptSBFNZ-vyRVlsG1Z_67&_nc_ohc=Qiyr4TYNTCUQ7kNvwFzRk6L&_nc_gid=WWICtGo0kotWTEpmfzthpA&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MzM5MTI2MTc3NjE5ODc5OTE3OA%3D%3D.3-ccb7-5&oh=00_AfmE66koqS9bZN8YE1b_dHr2C5uzrXr5d62jMOgocf5L0Q&oe=6940D6C2&_nc_sid=7a9f4b">
+                    <img src="Screenshot 2025-12-11 at 20.01.18.png">
                 </div>
 
                 <div class="grid-item">
@@ -214,11 +214,11 @@
                 </div>
 
                 <div class="grid-item span-col-2">
-                     <img src="https://scontent-lhr8-2.cdninstagram.com/v/t51.82787-15/586918065_18373967065154525_70718284773571809_n.jpg?stp=dst-jpg_e35_tt6&_nc_cat=106&ig_cache_key=Mzc3MjU4ODM0ODEyOTQzMTEwOQ%3D%3D.3-ccb7-5&ccb=7-5&_nc_sid=58cdad&efg=eyJ2ZW5jb2RlX3RhZyI6InhwaWRzLjEyOTB4MTMyMS5zZHIuQzMifQ%3D%3D&_nc_ohc=oEZth4C58QAQ7kNvwHNGVJ5&_nc_oc=AdmDk6A_snNlGk48E1VY97sfi0krW5S4FiFfzjccnB1Wc24G829w9SoHgi21e1YC38lr-seMWRMVNgMHyiDMqz6b&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-lhr8-2.cdninstagram.com&_nc_gid=WWICtGo0kotWTEpmfzthpA&oh=00_Afn2gepk8k9tDr_PfyrBvQu5WWfcU24afhGMPU15EGXT2w&oe=69410607>
+                     <img src="Screenshot 2025-12-11 at 20.02.45.png">
                 </div>
 
                 <div class="grid-item">
-                     <img src="https://scontent-lhr8-2.cdninstagram.com/v/t51.2885-15/28157703_175410729745698_2054371192269176832_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjEwODB4MTA4MC5zZHIuZjI4ODUuZGVmYXVsdF9pbWFnZS5jMiJ9&_nc_ht=scontent-lhr8-2.cdninstagram.com&_nc_cat=106&_nc_oc=Q6cZ2QHA10qjGS-6MCtj-Pd2nNVEvLpH3PJZYIqBCWj9kP2kitlYXvH7PvxqKE9o6XJytcGaptSBFNZ-vyRVlsG1Z_67&_nc_ohc=TLLFmany6RwQ7kNvwGlhXPo&_nc_gid=WWICtGo0kotWTEpmfzthpA&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MTcyMTgxOTE0NzAyODc4Mjk0Nw%3D%3D.3-ccb7-5&oh=00_Afl4f0_1NHjDYAvlbm9HQqIpJMECKqXC19fLWFtHUptUFw&oe=6940F637&_nc_sid=7a9f4b">
+                     <img src="Screenshot 2025-12-11 at 20.03.18.png">
                 </div>
 
                 <div class="grid-item">
@@ -228,7 +228,7 @@
                 </div>
 
                  <div class="grid-item">
-                     <img src="https://scontent-lhr8-1.cdninstagram.com/v/t51.29350-15/467404997_916880136637796_3340356886265018100_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjE0NDB4MTQ0MC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=scontent-lhr8-1.cdninstagram.com&_nc_cat=108&_nc_oc=Q6cZ2QHA10qjGS-6MCtj-Pd2nNVEvLpH3PJZYIqBCWj9kP2kitlYXvH7PvxqKE9o6XJytcGaptSBFNZ-vyRVlsG1Z_67&_nc_ohc=R_TtG9hC8bgQ7kNvwHb8qaP&_nc_gid=WWICtGo0kotWTEpmfzthpA&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MzUwNDA5MzMyNzAwMTkxMTQzNQ%3D%3D.3-ccb7-5&oh=00_AfknLUpWDzrniId52lh5WTl0AHjiT7p0uMVUOAoBBKspEg&oe=6940D6C0&_nc_sid=7a9f4b">
+                     <img src="Screenshot 2025-12-11 at 20.04.16.png">
                 </div>
 
             </div>
@@ -237,7 +237,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 | Built exclusively for nura.</p>
+            <p>© 2025 | Built exclusively for Nura.</p>
         </div>
     </footer>
 
