Update quotes in index.html

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                 </div>
 
                 <div class="grid-item">
-                    <div class="item-text-content">
-                        <p>Put some text here</p>
+                    <div class="item-quote-content">
+                        <p>"This is like, the best secret santa gift ever." - Nura (Probably)</p>
                     </div>
                 </div>
 
@@ -223,7 +223,7 @@
 
                 <div class="grid-item">
                     <div class="item-quote-content">
-                        "quote here" - nura
+                        "The lesbian boats have ahd three sentences and now they've got a squid" - Nura (Actually, somehow)
                     </div>
                 </div>
 
