Correct typos in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <div class="container">
         <header>
-            <div class="brand">nura.bentata</div>
+            <div class="brand">Nura Bentata</div>
         </header>
 
         <section class="hero-split">
@@ -223,7 +223,7 @@
 
                 <div class="grid-item">
                     <div class="item-quote-content">
-                        "The lesbian boats have ahd three sentences and now they've got a squid" - Nura (Actually, somehow)
+                        "The lesbian boats have had three sentences and now they've got a squid" - Nura (Actually, somehow)
                     </div>
                 </div>
 
