Enhance index.html with meta tags for social sharing
Added Open Graph and Twitter meta tags for better sharing.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✨</text></svg>">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nura.</title>
+    <meta property="og:type" content="website">
+<meta property="og:url" content="nurab.co.uk">
+<meta property="og:title" content="A Gift for Nura">
+<meta property="og:description" content="A curated digital space for the head of culture.">
+<meta property="og:image" content="nurab.co.uk/Screenshot%202025-12-11%20at%2020.00.23.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="A Gift for Nura">
+<meta name="twitter:description" content="A curated digital space for the head of culture.">
+<meta name="twitter:image" content="nurab.co.uk/Screenshot%202025-12-11%20at%2020.00.23.png">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     
     <style>
